# virtio-console

./: Cargo.toml  README.md
examples/vm1/: arceos-aarch64-qemu-smp3.toml  helloworld-myplat_aarch64-dyn.elf
examples/vm1/src/: main.rs
examples/vm2/: Cargo.toml  helloworld-myplat_aarch64-dyn.elf
examples/vm2/src/: arceos-aarch64-qemu-smp4.toml  hal.rs  hvc.rs  main.rs
src/: config.rs  console.rs  lib.rs  queue.rs
