[package]
name = "virtio-console"
version = "0.1.0"
edition = "2024"
authors = ["Iscreamx <iscreamx404@gmail.com>"]

[features]

[dependencies]
log = "0.4"
spin = "0.9"

# System independent crates provided by ArceOS.
axerrno = "0.1.0"
memory_addr = "0.4"

axvmconfig = { version = "0.1", default-features = false }
axaddrspace = "0.1"
axdevice_base = "0.1"
axhal = {git = "https://github.com/arceos-org/arceos.git", tag = "dev-251216"}

