[package]
authors = ["Yuekai Jia <equation618@gmail.com>"]
edition.workspace = true
name = "arceos-helloworld-myplat"
version = "0.1.0"

[features]
aarch64-bsta1000b = ["dep:axplat-aarch64-bsta1000b"]
aarch64-phytium-pi = ["dep:axplat-aarch64-phytium-pi"]
aarch64-qemu-virt = ["dep:axplat-aarch64-qemu-virt"]
aarch64-raspi4 = ["dep:axplat-aarch64-raspi"]
aarch64-dyn = ["dep:axplat-aarch64-dyn"]
loongarch64-qemu-virt = ["dep:axplat-loongarch64-qemu-virt"]
riscv64-qemu-virt = ["dep:axplat-riscv64-qemu-virt"]
x86-pc = ["dep:axplat-x86-pc"]

[dependencies]
axstd = { workspace = true, features = ["alloc", "myplat"], optional = true }

axhvc = {git = "https://github.com/Iscreamx/axhvc.git", branch = "virtio-console" }
cfg-if = "1.0"
axaddrspace = "0.1"
virtio-drivers = "0.7.0"
fdt = "0.1.5"
arceos_api = { workspace = true, features = ["dma"] }
axhal = { workspace = true }

[target.'cfg(target_arch = "x86_64")'.dependencies]
axplat-x86-pc = {workspace = true, features = ["smp", "irq"], optional = true}

[target.'cfg(target_arch = "aarch64")'.dependencies]
axplat-aarch64-bsta1000b = {workspace = true, features = ["smp", "irq"], optional = true}
axplat-aarch64-phytium-pi = {workspace = true, features = ["smp", "irq"], optional = true}
axplat-aarch64-qemu-virt = {workspace = true, features = ["smp", "irq"], optional = true}
axplat-aarch64-dyn = { git = "https://github.com/arceos-hypervisor/axplat-aarch64-dyn.git", tag = "v0.3.3", features = ["smp", "irq"], optional = true }
axplat-aarch64-raspi = {workspace = true, features = ["smp", "irq"], optional = true}

[target.'cfg(target_arch = "riscv64")'.dependencies]
axplat-riscv64-qemu-virt = {workspace = true, features = ["smp", "irq"], optional = true}

[target.'cfg(target_arch = "loongarch64")'.dependencies]
axplat-loongarch64-qemu-virt = {workspace = true, features = ["smp", "irq"], optional = true}
